k3s-ha-cluster/deployments/pi-hole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
        - name: pihole
          image: pihole/pihole:latest
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "100m"
          ports:
            - containerPort: 80
              name: pihole-http
              protocol: TCP
            - containerPort: 53
              name: pihole-dns-tcp
              protocol: TCP
            - containerPort: 53
              name: pihole-dns-udp
              protocol: UDP
            - containerPort: 443
              name: pihole-ssl
              protocol: TCP
            - containerPort: 67
              name: client-udp
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /etc/pihole
            - name: dnsmasq
              mountPath: /etc/dnsmasq.d
      nodeSelector:
        role: pi-hole
      hostNetwork: true
      dnsPolicy: "ClusterFirstWithHostNet"
      volumes:
        - name: config
          emptyDir: {}
        - name: dnsmasq
          emptyDir: {}
      dnsConfig:
        nameservers:
          - 8.8.8.8
