k3s-ha-cluster/deployments/pi-hole/service-tcp.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole
  name: pihole-tcp
  namespace: pihole
  annotations:
    metallb.universe.tf/allow-shared-ip: shared
spec:
  ports:
    - name: pihole-dns-tcp
      protocol: TCP
      port: 53
      targetPort: pihole-dns-tcp
    - name: pihole-http
      protocol: TCP
      port: 80
      targetPort: pihole-http
    - name: pihole-ssl
      protocol: TCP
      port: 443
      targetPort: pihole-ssl
  selector:
    app: pihole
  loadBalancerIP: 192.168.0.202
  externalTrafficPolicy: Local
  type: LoadBalancer
