k3s-ha-cluster/deployments/pi-hole/service-udp.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole
  name: pihole-udp
  namespace: pihole
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole
spec:
  ports:
    - name: pihole-dns-udp
      protocol: UDP
      port: 53
      targetPort: pihole-dns-udp
    - name: client-udp
      protocol: UDP
      port: 67
      targetPort: client-udp
  selector:
    app: pihole
  loadBalancerIP: 192.168.0.202
  externalTrafficPolicy: Cluster
  type: LoadBalancer
