k3s-ha-cluster/deployments/pi-hole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: pihole
spec:
  ingressClassName: caddy
  rules:
    - host: pihole.lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-tcp
                port:
                  number: 80
